--- a/index.html
+++ b/index.html
@@ -47,16 +47,19 @@
   <head>
     <title>Omar Jandali Udacity Map</title>
     <script type="text/javascript" src="js/model.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div id="container" >
+    <div id="container">
+      <div id="markerWindow">
 
+      </div>
+      <div id="map"></div>
     </div>
-    <script type="text/javascript" src="collections/underscore.js"></script>
-    <script type="text/javascript" src="collections/backbone.js"></script>
-    <script type="text/javascript" src="collections/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="collection/underscore.js"></script>
+    <script type="text/javascript" src="collection/backbone.js"></script>
+    <script type="text/javascript" src="collection/jquery-3.1.0.js"></script>
     <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDik_TF3x4yc96CvWWw12YQ4DMjoG3vfFM&v=3&callback=initMap"></script>
   </body>
 </html>
