this is the most updated version of the project

--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
   </head>
   <body>
     <div id="container">
-      <div id="markerWindow">
-        <div>Name: <span data-bind="text: marker.content[i].name"></span></div>
-      </div>
       <div id="map"></div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+    <script type="text/javascript" src="collection/knockout-3.4.0.js"></script>
+    <script type="text/javascript" src="collection/instafeed.min.js"></script>
     <script type="text/javascript" src="collection/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDik_TF3x4yc96CvWWw12YQ4DMjoG3vfFM&v=3&callback=initMap"></script>
