--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
   This project was created and written by Omar Jandali for a Udacity FEND project: Neighborhood Map
 -->
@@ -42,19 +43,28 @@
       you should be able to understand how the interface works without any effort and research involved
 -->
 
-<!DOCTYPE html>
 <html>
   <head>
     <title>Omar Jandali Udacity Map</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1"
   </head>
   <body>
     <div id="container">
-      <div id="map"></div>
+      <div class="options">
+        <h2>Welcome to Donwtown Los Angeles</h2>
+        <div>
+          <input id="show-places" type="button" value="Show Places">
+          <input id="hide-places" type="button" value="Hide Places">
+        </div>
+      </div>
+      <div id="map" class="map-canvas"></div>
     </div>
     <script type="text/javascript" src="collection/knockout-3.4.0.js"></script>
     <script type="text/javascript" src="collection/instafeed.min.js"></script>
     <script type="text/javascript" src="collection/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="js/model.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDik_TF3x4yc96CvWWw12YQ4DMjoG3vfFM&v=3&callback=initMap"></script>
   </body>
