small changes in preperation for the frilter system

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           <input id="show-places" type="button" value="Show Places">
           <input id="hide-places" type="button" value="Hide Places">
         </div>
+        <ul class="locationList" data-binding="forEach: pointItem">
+          <li><span data-binding="text: pointName"></span></li>
+        </ul>
       </div>
       <div id="map" class="map-canvas"></div>
     </div>
