--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 		<title>Project 5</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta charset="utf-8">
-	    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMFvCBzTwbhXTpu9lHLkXX3NkrUOKwlOM"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script type="text/javascript" src="./js/knockout-3.3.0.js"></script>
-		<script type="text/javascript" src="./js/map.js"></script>
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<script type="text/javascript" src="js/knockout-3.4.0.js"></script>
+		<script type="text/javascript" src="js/map.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	    </head>
 	<body>
