--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta charset="utf-8">
 	    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMFvCBzTwbhXTpu9lHLkXX3NkrUOKwlOM"></script>
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" async defer></script>
 		<script type="text/javascript" src="js/knockout-3.4.0.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,7 +18,7 @@
 					Search:
 					<input data-bind="value: filterText, valueUpdate: 'afterkeydown'" type="text" id="search">
 					</label>
-					<ul class="list-group" data-bind="foreach: filtered_key_favorites">
+					<ul class="list-group" data-bind="foreach: filtered_keyFavorites">
 					    <li class="list-group-item" data-bind="text: name, click: $parent.locationSelected, css: {'active': isActive}"></li>
 					</ul>
 				</div>
