fixed the sync issue and the marker turns green when it is clicked on

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 		<title>Project 5</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta charset="utf-8">
-	    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMFvCBzTwbhXTpu9lHLkXX3NkrUOKwlOM"></script>
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" async defer></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMFvCBzTwbhXTpu9lHLkXX3NkrUOKwlOM" async onerror></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script type="text/javascript" src="js/knockout-3.4.0.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
